# cmri-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  test_doc_nag.sh
.github/workflows/: commit_checks-cmri.yml  commit_checks-cmri_tools.yml  commit_checks-test_nodes.yml  commit_checks.yml  release-cmri.yml  release-cmri_tools.rb  release-cmri_tools.yml
cmri/: CHANGELOG.md  Cargo.toml  README.md  build.rs  test.sh
cmri/src/: address.rs  lib.rs  raw_structs.rs
cmri/src/frame/: error.rs  mod.rs  raw.rs
cmri/src/node_configuration/: cp.rs  mod.rs  node_sort.rs  smini.rs
cmri/src/node_configuration/sic/: mod.rs  node_cards.rs
cmri/src/packet/: data.rs  error.rs  mod.rs  packet.rs  payload.rs  raw.rs
cmri_tools/: Cargo.toml  LICENSE.md  README.md  build.rs  test.sh
cmri_tools/src/: connection.rs  file.rs  lib.rs  readings.rs
cmri_tools/src/cli/: args.rs
cmri_tools/src/gui/: connection.rs  menu.rs  mod.rs
docs/packets/: bad  init  poll  receive  transmit  unknown
test_nodes/: Cargo.toml  build.rs  memory.x  rust-toolchain.toml  test.html
test_nodes/.cargo/: config.toml
