[workspace]
resolver = "2"

members = [
    "cmri",
    "cmri_tools"
]

exclude = [
    "test_nodes"
]

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
unwrap_used = { level = "warn", priority = 10 }
missing_const_for_fn = { level = "warn", priority = 10 }
expect_used = { level = "allow", priority = 10 }
