[package]
name = "test_nodes"
version = "0.1.1"
edition = "2021"
resolver = "2"

[dependencies]
defmt = "0.3.7"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
cortex-m-rt = "0.7.3"
embassy-executor = { version = "0.5.0", features = ["task-arena-size-4096", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-futures = "0.1.1"
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime-us"] }
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.1.0", features = ["rt", "defmt", "intrinsics", "time-driver", "critical-section-impl"] }
rand = { version = "0.8.5", default-features = false, features=["small_rng"] }
cmri = { version = "0.1.1", path = "../cmri", default-features = false }

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = { level = "warn", priority = 5 }
unwrap_used = { level = "warn", priority = 10 }
missing_const_for_fn = { level = "warn", priority = 10 }
expect_used = { level = "allow", priority = 10 }
cargo_common_metadata = { level = "allow", priority = 10 }
